force-app/main/default/objects/S_P_Vendors__c/fields/Does_the_Customer_have_Shared_Storage__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Customer_have_Shared_Storage__c</fullName>
    <label>Does the Customer have Shared Storage?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>