force-app/main/default/objects/S_P_Vendors__c/fields/Driving_the_timeframe_on_this_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Driving_the_timeframe_on_this_Oppty__c</fullName>
    <inlineHelpText>What is driving the timeframe on this opportunity?</inlineHelpText>
    <label>Driving the timeframe on this Oppty.?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>