force-app/main/default/objects/S_P_Vendors__c/fields/Eligible_Product_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Product_Revenue__c</fullName>
    <label>Eligible Product Revenue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>