force-app/main/default/objects/S_P_Vendors__c/fields/Enterprise_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Enrollment__c</fullName>
    <label>Enterprise Enrollment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Is_this_an_Enterprise_Agreement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>ECI</fullName>
            </value>
            <value>
                <fullName>EAS</fullName>
            </value>
            <value>
                <fullName>True Up</fullName>
            </value>
            <value>
                <fullName>SCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>