force-app/main/default/objects/S_P_Vendors__c/fields/Equipment_will_reside_at_this_address_L__c.field-meta.xml
<CustomField>
    <fullName>Equipment_will_reside_at_this_address_L__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the company address below the location where the equipment will be installed?</inlineHelpText>
    <label>Equipment will reside at this address?</label>
    <type>Checkbox</type>
</CustomField>