force-app/main/default/objects/S_P_Vendors__c/fields/Estimated_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Closed_Date__c</fullName>
    <label>Estimated Closed Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&gt; 30 Days</fullName>
            </value>
            <value>
                <fullName>31-60 Days</fullName>
            </value>
            <value>
                <fullName>61-90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>