force-app/main/default/objects/S_P_Vendors__c/fields/Estimated_first_delivery_date_quantity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_first_delivery_date_quantity__c</fullName>
    <label>Estimated first delivery date &amp; quantity</label>
    <type>TextArea</type>
</CustomField>