force-app/main/default/objects/S_P_Vendors__c/fields/Exclusively_selling_Nutanix__c.field-meta.xml
<CustomField>
    <fullName>Exclusively_selling_Nutanix__c</fullName>
    <label>Exclusively selling Nutanix?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>