force-app/main/default/objects/S_P_Vendors__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <label>Expected Close Date?</label>
    <type>Date</type>
</CustomField>