force-app/main/default/objects/S_P_Vendors__c/fields/Extend_Registration__c.field-meta.xml
<CustomField>
    <fullName>Extend_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of Story 3457563:VMware API – Registration Extensions (field changes)</description>
    <label>Extend Registration</label>
    <type>Checkbox</type>
</CustomField>