force-app/main/default/objects/S_P_Vendors__c/fields/Field_Installation_Country__c.field-meta.xml
<CustomField>
    <fullName>Field_Installation_Country__c</fullName>
    <label>Field Installation Country</label>
    <length>120</length>
    <type>Text</type>
</CustomField>