force-app/main/default/objects/S_P_Vendors__c/fields/Field_Installation_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Field_Installation_State_Province__c</fullName>
    <description>This field is used to enter state value manually</description>
    <label>Field Installation State/Province</label>
    <length>120</length>
    <type>Text</type>
</CustomField>