force-app/main/default/objects/S_P_Vendors__c/fields/Field_Installation_Street__c.field-meta.xml
<CustomField>
    <fullName>Field_Installation_Street__c</fullName>
    <description>This field is created for manual use of entering the Street</description>
    <label>Field Installation Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>