force-app/main/default/objects/S_P_Vendors__c/fields/Field_Installation_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Field_Installation_Zip_Postal_Code__c</fullName>
    <label>Field Installation Zip/Postal Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>