force-app/main/default/objects/S_P_Vendors__c/fields/Final_Approver_Title__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver_Title__c</fullName>
    <inlineHelpText>Mandatory if ELA is selected for Program Type</inlineHelpText>
    <label>Final Approver Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>