force-app/main/default/objects/S_P_Vendors__c/fields/First_Activity_for_this_Deal_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_for_this_Deal_MM_DD_YYYY__c</fullName>
    <inlineHelpText>Date must be on or before today&apos;s date</inlineHelpText>
    <label>Last Activity for this Deal(MM/DD/YYYY)</label>
    <type>Date</type>
</CustomField>