force-app/main/default/objects/S_P_Vendors__c/fields/Future_printer_opps__c.field-meta.xml
<CustomField>
    <fullName>Future_printer_opps__c</fullName>
    <label>Future printer opps?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>