force-app/main/default/objects/S_P_Vendors__c/fields/Has_the_Cust_budgeted_the_project_yet__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Cust_budgeted_the_project_yet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the Customer budgeted the project yet?</inlineHelpText>
    <label>Has the Cust. budgeted the project yet?</label>
    <type>Checkbox</type>
</CustomField>