force-app/main/default/objects/S_P_Vendors__c/fields/Have_you_had_a_Webex_demo_set_up_yet__c.field-meta.xml
<CustomField>
    <fullName>Have_you_had_a_Webex_demo_set_up_yet__c</fullName>
    <label>Have you had a Webex demo set up yet?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>