force-app/main/default/objects/S_P_Vendors__c/fields/History_of_relationship__c.field-meta.xml
<CustomField>
    <fullName>History_of_relationship__c</fullName>
    <label>History of relationship</label>
    <type>TextArea</type>
</CustomField>