force-app/main/default/objects/S_P_Vendors__c/fields/How_did_you_uncover_this_opportunity1__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_uncover_this_opportunity1__c</fullName>
    <inlineHelpText>Detail the value added to this deal.</inlineHelpText>
    <label>How did you uncover this opportunity?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>