force-app/main/default/objects/S_P_Vendors__c/fields/How_did_you_uncover_this_opportunity__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_uncover_this_opportunity__c</fullName>
    <label>How did you uncover this opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work with customer on regular basis. Dell SW AE initiated a conversation on benefits of Acrobat during on site account review.</fullName>
            </value>
            <value>
                <fullName>Work with customer on regular basis. Dell SW AE had call with customer to discuss benefits of Creative Suites.</fullName>
            </value>
            <value>
                <fullName>Dell account team initiated discussions on CLP and what products they should purchase to qualify for CLP.</fullName>
            </value>
            <value>
                <fullName>Other (Rep to fill in own comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>