force-app/main/default/objects/S_P_Vendors__c/fields/How_long_you_had_contact_this_cust__c.field-meta.xml
<CustomField>
    <fullName>How_long_you_had_contact_this_cust__c</fullName>
    <inlineHelpText>How long have you had contact with this customer prior to this deal?</inlineHelpText>
    <label>How long you had contact this cust.?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>