force-app/main/default/objects/S_P_Vendors__c/fields/How_we_buy__c.field-meta.xml
<CustomField>
    <fullName>How_we_buy__c</fullName>
    <label>How we buy ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYNNEX</fullName>
            </value>
            <value>
                <fullName>Tech Data Corporation</fullName>
            </value>
            <value>
                <fullName>Exertis Supply Chain Solutions</fullName>
            </value>
            <value>
                <fullName>Ingram Micro, Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>