force-app/main/default/objects/S_P_Vendors__c/fields/Hypervisor__c.field-meta.xml
<CustomField>
    <fullName>Hypervisor__c</fullName>
    <label>Hypervisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AHV</fullName>
            </value>
            <value>
                <fullName>ESX</fullName>
            </value>
            <value>
                <fullName>Hyper-V</fullName>
            </value>
            <value>
                <fullName>KVM</fullName>
            </value>
            <value>
                <fullName>XEN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>