force-app/main/default/objects/S_P_Vendors__c/fields/If_so_what__c.field-meta.xml
<CustomField>
    <fullName>If_so_what__c</fullName>
    <label>If so, what?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>POS_options_drawers_memory_etc__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Extra sheet drawers</fullName>
            </value>
            <value>
                <fullName>POS toner</fullName>
            </value>
            <value>
                <fullName>Memory</fullName>
            </value>
            <value>
                <fullName>HDD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>