force-app/main/default/objects/S_P_Vendors__c/fields/If_Yes_name_of_the_NetScout_Acct_Mgr__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_name_of_the_NetScout_Acct_Mgr__c</fullName>
    <inlineHelpText>If Yes, what is the name of the NetScout Account Manager?</inlineHelpText>
    <label>If Yes,name of the NetScout Acct. Mgr.?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>