force-app/main/default/objects/S_P_Vendors__c/fields/If_yes_what_is_the_name_of_Citrix_Rep__c.field-meta.xml
<CustomField>
    <fullName>If_yes_what_is_the_name_of_Citrix_Rep__c</fullName>
    <inlineHelpText>If yes, what is the name of the Citrix Rep you are working with?</inlineHelpText>
    <label>If yes, what is the name of Citrix Rep?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>