force-app/main/default/objects/S_P_Vendors__c/fields/Is_Adobe_CLP_open__c.field-meta.xml
<CustomField>
    <fullName>Is_Adobe_CLP_open__c</fullName>
    <label>Is Adobe CLP open</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
                <default>true</default>
                <label>Don&apos;t Know</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>