force-app/main/default/objects/S_P_Vendors__c/fields/Is_company_address_below_the_location2__c.field-meta.xml
<CustomField>
    <fullName>Is_company_address_below_the_location2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the company address below the location where the equipment will be installed?</inlineHelpText>
    <label>Is company address below the location?</label>
    <type>Checkbox</type>
</CustomField>