force-app/main/default/objects/S_P_Vendors__c/fields/Is_Customer_doing_a_POC__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_doing_a_POC__c</fullName>
    <label>Is Customer doing a POC ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>