force-app/main/default/objects/S_P_Vendors__c/fields/Is_there_a_qualified_budget__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_qualified_budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there a qualified budget?</label>
    <type>Checkbox</type>
</CustomField>