force-app/main/default/objects/S_P_Vendors__c/fields/Is_this_a_Government_User__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Government_User__c</fullName>
    <label>Is this a Government User?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>