force-app/main/default/objects/S_P_Vendors__c/fields/Is_this_an_Enterprise_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_Enterprise_Agreement__c</fullName>
    <label>Is this an Enterprise Agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>