force-app/main/default/objects/S_P_Vendors__c/fields/Is_this_in_response_to_an_RFP_RFI__c.field-meta.xml
<CustomField>
    <fullName>Is_this_in_response_to_an_RFP_RFI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this in response to an RFP/RFI?</label>
    <type>Checkbox</type>
</CustomField>