force-app/main/default/objects/S_P_Vendors__c/fields/Is_this_Oppty_part_of_a_formal_RFP__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Oppty_part_of_a_formal_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this Oppty. part of a formal RFP?</label>
    <type>Checkbox</type>
</CustomField>