force-app/main/default/objects/S_P_Vendors__c/fields/Is_VMware_Sales_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Is_VMware_Sales_Engaged__c</fullName>
    <inlineHelpText>Name of the VMWare sales person you&apos;re working with</inlineHelpText>
    <label>Who is the VMWare sales person?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>