force-app/main/default/objects/S_P_Vendors__c/fields/ISX_Configuration_optional__c.field-meta.xml
<CustomField>
    <fullName>ISX_Configuration_optional__c</fullName>
    <label>ISX Configuration # (optional)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>