force-app/main/default/objects/S_P_Vendors__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>The GRID USS Campaign</fullName>
            </value>
            <value>
                <fullName>The GRID ACE Campaign</fullName>
            </value>
            <value>
                <fullName>The GRID MS Exchange Campaign</fullName>
            </value>
            <value>
                <fullName>The GRID ADC Campaign</fullName>
            </value>
            <value>
                <fullName>The GRID ADF Campaign</fullName>
            </value>
            <value>
                <fullName>The GRID Security Event Campaign</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>