force-app/main/default/objects/S_P_Vendors__c/fields/Level_of_your_involvement__c.field-meta.xml
<CustomField>
    <fullName>Level_of_your_involvement__c</fullName>
    <description>The field is ONLY used for Nutanix record type.</description>
    <label>Level of your involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfillment Only</fullName>
            </value>
            <value>
                <fullName>Joint Sale with Nutanix</fullName>
            </value>
            <value>
                <fullName>Driven by Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>