force-app/main/default/objects/S_P_Vendors__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Dell OEM</fullName>
            </value>
            <value>
                <fullName>Dell SnP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>