force-app/main/default/objects/S_P_Vendors__c/fields/License_Type_Please_choose__c.field-meta.xml
<CustomField>
    <fullName>License_Type_Please_choose__c</fullName>
    <label>License Type: (Please choose)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Desktop Subscription</fullName>
            </value>
            <value>
                <fullName>Network Activation</fullName>
            </value>
            <value>
                <fullName>Crossgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>