force-app/main/default/objects/S_P_Vendors__c/fields/Licensing_Program__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Program__c</fullName>
    <label>Licensing Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_this_an_Enterprise_Agreement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Select Plus</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Open Value</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>