force-app/main/default/objects/S_P_Vendors__c/fields/Liebert_Quote__c.field-meta.xml
<CustomField>
    <fullName>Liebert_Quote__c</fullName>
    <label>Liebert Quote#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>