force-app/main/default/objects/S_P_Vendors__c/fields/Main_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Main_Competitor__c</fullName>
    <label>Main Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>