force-app/main/default/objects/S_P_Vendors__c/fields/McAfee_part_number_s__c.field-meta.xml
<CustomField>
    <fullName>McAfee_part_number_s__c</fullName>
    <inlineHelpText>McAfee part number(s) of items being registered</inlineHelpText>
    <label>McAfee part number(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>