force-app/main/default/objects/S_P_Vendors__c/fields/McAfee_Product__c.field-meta.xml
<CustomField>
    <fullName>McAfee_Product__c</fullName>
    <inlineHelpText>Enter Mfg Part number</inlineHelpText>
    <label>McAfee Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5500DLP McAfee DLP Appliance 5500</fullName>
            </value>
            <value>
                <fullName>ACD McAfee Application Control for PCs</fullName>
            </value>
            <value>
                <fullName>ACE-2600 McAfee Advanced Correlation Engine 2600</fullName>
            </value>
            <value>
                <fullName>ACE-3450 McAfee Advanced Correlation Engine 3450</fullName>
            </value>
            <value>
                <fullName>ACS McAfee Application Control for Servers</fullName>
            </value>
            <value>
                <fullName>ATD-3000 McAfee Advanced Threat Defense 3000</fullName>
            </value>
            <value>
                <fullName>ATD-6000 McAfee Advanced Threat Defense 6000</fullName>
            </value>
            <value>
                <fullName>AVM McAfee VirusScan for MAC</fullName>
            </value>
            <value>
                <fullName>C1015 McAfee Firewall Enterprise Control Center C1015</fullName>
            </value>
            <value>
                <fullName>C2050 McAfee Firewall Enterprise Control Center C2050</fullName>
            </value>
            <value>
                <fullName>C3000 McAfee Firewall Enterprise Control Center C3000</fullName>
            </value>
            <value>
                <fullName>CCD McAfee Change Control for PCs</fullName>
            </value>
            <value>
                <fullName>CDA McAfee Complete Data Protection Advanced</fullName>
            </value>
            <value>
                <fullName>CDB McAfee Complete Data Protection</fullName>
            </value>
            <value>
                <fullName>CDE McAfee Complete Data Protection Essential</fullName>
            </value>
            <value>
                <fullName>CEB McAfee Complete EndPoint Protection - Business</fullName>
            </value>
            <value>
                <fullName>CEE McAfee Complete EndPoint Protection - Enterprise</fullName>
            </value>
            <value>
                <fullName>CHS McAfee Change Control for Servers</fullName>
            </value>
            <value>
                <fullName>CSS McAfee Content Security Suite</fullName>
            </value>
            <value>
                <fullName>DAS-100 McAfee Direct Attached Storage 100</fullName>
            </value>
            <value>
                <fullName>DAS-50 McAfee Direct Attached Storage 50</fullName>
            </value>
            <value>
                <fullName>DCD McAfee Datacenter Security Suite for Database</fullName>
            </value>
            <value>
                <fullName>DDS McAfee DLP Discover Appliance Software</fullName>
            </value>
            <value>
                <fullName>DEC McAfee Device Control</fullName>
            </value>
            <value>
                <fullName>DEM-2600 McAfee Database Event Monitor for SIEM 2600</fullName>
            </value>
            <value>
                <fullName>DEM-4600 McAfee Database Event Monitor for SIEM 4600</fullName>
            </value>
            <value>
                <fullName>DLP McAfee Data Loss Prevention Endpoint</fullName>
            </value>
            <value>
                <fullName>DLPU McAfee Data Loss Prevention Endpoint Upgrade</fullName>
            </value>
            <value>
                <fullName>DMO McAfee DLP Monitor Appliance Software</fullName>
            </value>
            <value>
                <fullName>DPV McAfee DLP Prevent Appliance Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>