force-app/main/default/objects/S_P_Vendors__c/fields/McAfee_Teaming_Plan__c.field-meta.xml
<CustomField>
    <fullName>McAfee_Teaming_Plan__c</fullName>
    <inlineHelpText>A Teaming Plan is submitted by a McAfee sales rep for deals discovered by McAfee where they would like Dell&apos;s assistance to close the deal. If unknown, select No.</inlineHelpText>
    <label>McAfee Teaming Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>