force-app/main/default/objects/S_P_Vendors__c/fields/Microsoft_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Agreement_Number__c</fullName>
    <label>Microsoft Agreement Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>