force-app/main/default/objects/S_P_Vendors__c/fields/Missing_Segment__c.field-meta.xml
<CustomField>
    <fullName>Missing_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Segment</label>
    <type>Checkbox</type>
</CustomField>