force-app/main/default/objects/S_P_Vendors__c/fields/Model_Size__c.field-meta.xml
<CustomField>
    <fullName>Model_Size__c</fullName>
    <label>Model / Size</label>
    <type>TextArea</type>
</CustomField>