force-app/main/default/objects/S_P_Vendors__c/fields/MS_Invoice__c.field-meta.xml
<CustomField>
    <fullName>MS_Invoice__c</fullName>
    <label>MS Invoice #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>