force-app/main/default/objects/S_P_Vendors__c/fields/Names_of_Cust_Personnel_name_title__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Cust_Personnel_name_title__c</fullName>
    <inlineHelpText>Names of Customer Personnel that you have met with regarding this project (name &amp; title)</inlineHelpText>
    <label>Names of Cust. Personnel(name &amp; title)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>