force-app/main/default/objects/S_P_Vendors__c/fields/Need_to_be_TAA_compliant__c.field-meta.xml
<CustomField>
    <fullName>Need_to_be_TAA_compliant__c</fullName>
    <inlineHelpText>Trade Agreement Act Must be built in approved countries</inlineHelpText>
    <label>Need to be TAA compliant?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>