force-app/main/default/objects/S_P_Vendors__c/fields/Next_steps__c.field-meta.xml
<CustomField>
    <fullName>Next_steps__c</fullName>
    <label>Next steps?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Setup call with APC</fullName>
            </value>
            <value>
                <fullName>Schedule onsite meeting with APC</fullName>
            </value>
            <value>
                <fullName>SKUs have been finalized, waiting on special pricing</fullName>
            </value>
            <value>
                <fullName>No immediate action required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>