force-app/main/default/objects/S_P_Vendors__c/fields/Node_Size__c.field-meta.xml
<CustomField>
    <fullName>Node_Size__c</fullName>
    <inlineHelpText>Enter Number of licenses</inlineHelpText>
    <label>Node Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 – 250</fullName>
            </value>
            <value>
                <fullName>251 – 1000</fullName>
            </value>
            <value>
                <fullName>1-1000</fullName>
            </value>
            <value>
                <fullName>1001+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>