force-app/main/default/objects/S_P_Vendors__c/fields/Number_of_Access_Points_required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Access_Points_required__c</fullName>
    <label>Number of Access Points required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>